<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobiLearn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_register">Register</string>
    <string name="surname">Surname</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="course">Course</string>

</resources>
