<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="blackwidow.mobilearn.Register" >

    <EditText
        android:id="@+id/surname_create_et_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/surname"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/lastname_create_et_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surname_create_et_al"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastname_create_et_al"
        android:layout_below="@+id/lastname_create_et_al"
        android:text="@string/course" />

    <Spinner
        android:id="@+id/course_create_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username_create_et_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_create_sp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_create_et_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_create_et_al"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password_create_et_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_create_et_al"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password_create_et_al"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/error_create_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_account_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center" />

</RelativeLayout>
